--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "readable-stream": "^4.5.2",
     "socket.io-client": "^4.7.4",
     "stream-browserify": "^3.0.0",
+    "video-stream-merger": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
