--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0",
     "readable-stream": "^4.5.2",
     "socket.io-client": "^4.7.4",
     "stream-browserify": "^3.0.0",
